@@ -17,7 +17,7 @@ Description: The Stuttgart Neural Network Simulator (SNNS) is a library
     learning algorithms integrate seamlessly into R.
 Version: 0.4-5
 URL: http://sci2s.ugr.es/dicits/software/RSNNS
-Date: 2014-05-19
+Date: 2014-05-21
 Depends:
     R (>= 2.10.0),
     methods,
