@@ -40,6 +40,8 @@ export(toNumericClassLabels)
 export(train)
 export(vectorToActMap)
 export(weightMatrix)
+import(methods)
+import(Rcpp)
 S3method(art1,default)
 S3method(art2,default)
 S3method(artmap,default)
