@@ -19,6 +19,20 @@ df <- splitForTrainingAndTest(dfValues, dfTargets, ratio=0.15)
 #normalize data
 df <- normTrainingAndTestSet(df)
 
+#df <- list()
+#
+##shuffle the vector
+#iris <- iris[sample(nrow(iris)),]
+#
+##normalize data
+#df$inputsTrain <- normalizeData(iris[,1:4], "norm")
+#
+##outputs <- decodeClassLabels(iris[,5])
+#df$targetsTrain <- decodeClassLabels(iris[,5], valTrue=0.9, valFalse=0.1)
+
+
+
+
 pruneFuncParams <- list(max_pr_error_increase = 10.0, pr_accepted_error = 1.0, no_of_pr_retrain_cycles = 1000, min_error_to_stop = 0.01,
                             init_matrix_value = 1e-6, input_pruning = TRUE, hidden_pruning = TRUE)
          
